--- a/Project-1-submission/css/global.css
+++ b/Project-1-submission/css/global.css
@@ -1,9 +1,3 @@
-.content {
-    width: 50%;
-    margin: 15%;
-    justify-content: center;
-}
-
 body::before {
     content:"" ;
     position: absolute;
@@ -16,4 +10,22 @@ body::before {
     background-repeat: no-repeat;
     filter: blur(1px);
     z-index: -1;
+}
+
+header {
+    display: flex;
+    justify-content: space-around;
+
+    margin: 2rem;
+    padding: 2rem;
+    border-radius: 0.5rem;
+    background-color: rgba(240, 248, 255, 0.689);
+}
+nav {;
+    font-size: 2rem;
+    color: rgb(1 , 94, 6);
+}
+
+.froggy {
+    color: rgb(1, 94, 6);
 }
