--- a/Project-1-submission/css/global.css
+++ b/Project-1-submission/css/global.css
@@ -21,7 +21,7 @@ header {
     border-radius: 0.5rem;
     background-color: rgba(240, 248, 255, 0.689);
 }
-nav {;
+nav {
     font-size: 2rem;
     color: rgb(1 , 94, 6);
 }
