--- a/Project-1-submission/css/global.css
+++ b/Project-1-submission/css/global.css
@@ -12,20 +12,26 @@ body::before {
     z-index: -1;
 }
 
-header {
-    display: flex;
-    justify-content: space-around;
+.header-logo {
+    margin: 0;
 
-    margin: 2rem;
-    padding: 2rem;
-    border-radius: 0.5rem;
+}
+header {
     background-color: rgba(240, 248, 255, 0.689);
 }
 nav {
+    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem;
+    padding: 2rem;
+    border-radius: 0.5rem;
     font-size: 2rem;
     color: rgb(1 , 94, 6);
 }
 
-.froggy {
+.header-text {
+    align-items:center;
+    justify-content: center;
     color: rgb(1, 94, 6);
 }
