--- a/Project-1-submission/css/global.css
+++ b/Project-1-submission/css/global.css
@@ -12,11 +12,17 @@ body::before {
     z-index: -1;
 }
 
+body {
+    padding-left: 10%;
+    padding-right: 10%;
+
+}
+
 .header-logo {
     margin: 0;
 
 }
-header {
+.header {
     background-color: rgba(240, 248, 255, 0.689);
 }
 nav {
@@ -34,4 +40,8 @@ nav {
     align-items:center;
     justify-content: center;
     color: rgb(1, 94, 6);
+}
+
+table {
+ 
 }
