--- a/Project-1-submission/css/global.css
+++ b/Project-1-submission/css/global.css
@@ -1,10 +1,10 @@
 body::before {
     content:"" ;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
     background-image: url("../img/background-tropical.png");
     background-size: cover;
     background-repeat: no-repeat;
@@ -48,4 +48,86 @@ body::before {
 
 .img-text a {
     color: rgb(0, 0, 0);
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: rgb(255, 235, 235);
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 80%;
+    max-width: 800px;
+    height: 600px;
+}
+
+.carousel-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 50;
+}
+
+.slideshow {
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.slideshow-wrapper {
+    display: flex;
+    width: 200%;
+    height: 100%;
+    position: relative;
+    left: 0;
+    animation: slideshow 20s infinite;
+}
+
+.slide {
+    width: 100%;
+    height: 100%;
+}
+
+.slide-img {
+    width: 100%;
+    height: 75%;
+    object-fit: cover;
+}
+
+.slide-btn {
+    background-color: #bbb;
+    border-radius: 50%;
+    border: .2rem solid rgb(1, 94, 6);
+    width: 1.2rem;
+    height: 1.2rem;
+    cursor: pointer;
+    position: absolute;
+    bottom: 3%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 70;
+}
+
+
+.slide-btn-1 { left: 45%; }
+.slide-btn-2 { left: 50%; }
+
+
+.slide-btn-1:focus ~ .slideshow-wrapper { animation: none; left: 0; }
+.slide-btn-2:focus ~ .slideshow-wrapper { animation: none; left: -100%; }
+
+.slide-btn:focus {
+    background-color: rgb(1, 94, 6);
 }
