prepare 3rd run

--- a/Project-2-submission/css/style.css
+++ b/Project-2-submission/css/style.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=style.css.map */
+h1 {
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+}/*# sourceMappingURL=style.css.map */
