setup index + scss

--- a/Project-2-submission/css/style.css
+++ b/Project-2-submission/css/style.css
@@ -1,20 +1,27 @@
 @import url("https://fonts.googleapis.com/css?family=Tangerine");
-h1 {
+.global-center-page {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-family: "Tangerine", cursive;
+  align-items: center;
 }
 
-form {
-  display: flex;
-  justify-content: center;
+.global-footer {
+  left: 0px;
+  bottom: 0px;
+}
+
+h1 {
+  font-family: "Tangerine", cursive;
+  color: rgb(6, 94, 1);
 }
 
 div .div-scroll-1 {
   display: flex;
-  justify-content: center;
-  width: 800px;
-  padding: 5px;
+  width: 500px;
+  word-wrap: break-word;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 @media only screen and (max-width: 600px) {
@@ -33,6 +40,11 @@ div .div-scroll-1 {
     justify-content: center;
     width: 500px;
   }
+  .global-footer {
+    left: 0px;
+    bottom: 0px;
+    background-color: rgba(250, 128, 114, 0.347);
+  }
 }
 @media only screen and (max-width: 400px) {
   h1 {
@@ -49,5 +61,10 @@ div .div-scroll-1 {
     display: flex;
     justify-content: center;
     width: 300px;
+  }
+  .global-footer {
+    left: 0px;
+    bottom: 0px;
+    background-color: rgba(127, 255, 212, 0.335);
   }
 }/*# sourceMappingURL=style.css.map */
