--- a/Project-2-submission/css/style.css
+++ b/Project-2-submission/css/style.css
@@ -1,4 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=Tangerine");
+@import url("https://fonts.googleapis.com/css2?family=Madimi+One&display=swap");
+body {
+  background-image: url("../img/tiles.png");
+}
+
 .global-center-page {
   display: flex;
   flex-direction: column;
@@ -9,11 +13,13 @@
 .global-footer {
   left: 0px;
   bottom: 0px;
+  width: 100%;
 }
 
 h1 {
-  font-family: "Tangerine", cursive;
-  color: rgb(6, 94, 1);
+  font-family: "Madimi One", sans-serif;
+  color: rgb(0, 0, 0);
+  font-size: 4rem;
 }
 
 div .div-scroll-1 {
@@ -28,7 +34,7 @@ div .div-scroll-1 {
   h1 {
     display: flex;
     justify-content: center;
-    font-size: 1.5em;
+    font-size: 3rem;
   }
   form {
     display: flex;
@@ -43,6 +49,7 @@ div .div-scroll-1 {
   .global-footer {
     left: 0px;
     bottom: 0px;
+    width: 100%;
     background-color: rgba(250, 128, 114, 0.347);
   }
 }
@@ -50,7 +57,7 @@ div .div-scroll-1 {
   h1 {
     display: flex;
     justify-content: center;
-    font-size: 1em;
+    font-size: 2rem;
   }
   form {
     display: flex;
@@ -65,6 +72,7 @@ div .div-scroll-1 {
   .global-footer {
     left: 0px;
     bottom: 0px;
+    width: 100%;
     background-color: rgba(127, 255, 212, 0.335);
   }
 }/*# sourceMappingURL=style.css.map */
