--- a/Project-2-submission/css/style.scss
+++ b/Project-2-submission/css/style.scss
@@ -1,6 +1,10 @@
-@import url("https://fonts.googleapis.com/css?family=Tangerine");
+@import url("https://fonts.googleapis.com/css2?family=Madimi+One&display=swap");
 
-$head-text-color: rgb(6, 94, 1);
+$head-text-color: rgb(0, 0, 0);
+
+body {
+    background-image: url("../img/tiles.png");
+}
 
 .global-center-page {
     display: flex;
@@ -12,11 +16,14 @@ $head-text-color: rgb(6, 94, 1);
 .global-footer {
     left: 0px;
     bottom: 0px;
+    width: 100%;
 }
 
 h1 {
-    font-family: "Tangerine", cursive;
+    font-family: "Madimi One", sans-serif;
     color: $head-text-color;
+    font-size: 4rem;
+
 }
 
 
@@ -34,7 +41,7 @@ div{
     h1 {
         display: flex;
         justify-content: center;
-        font-size: 1.5em;
+        font-size: 3rem;
     }
     form {
         display: flex;
@@ -49,6 +56,7 @@ div{
     .global-footer {
         left: 0px;
         bottom: 0px;
+        width: 100%;
         background-color: rgba(250, 128, 114, 0.347);
     }
 }
@@ -58,7 +66,7 @@ div{
     h1 {
         display: flex;
         justify-content: center;
-        font-size: 1em;
+        font-size: 2rem;
     }
     form {
         display: flex;
@@ -73,6 +81,7 @@ div{
     .global-footer {
         left: 0px;
         bottom: 0px;
+        width: 100%;
         background-color: rgba(127, 255, 212, 0.335)
     }
 }
