updated css and html for side by side h1 and nav

--- a/Project-2-submission/css/style.css
+++ b/Project-2-submission/css/style.css
@@ -1,4 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Madimi+One&display=swap");
+.global-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.global-nav {
+  display: flex;
+  align-items: center;
+}
+
+.global-nav ul {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  gap: 15px;
+}
+
 body {
   background-image: url("../img/tiles.png");
 }
@@ -20,6 +39,8 @@ h1 {
   font-family: "Madimi One", sans-serif;
   color: rgb(0, 0, 0);
   font-size: 4rem;
+  margin: 0%;
+  padding-right: 30%;
 }
 
 div .div-scroll-1 {
