add  buttons to change todolist
buttons do not work, all items are now given class "unchecked" upon creation and that class is changed to "checked" when clicked to mark complete

--- a/Project-3-submission/css/index.css
+++ b/Project-3-submission/css/index.css
@@ -52,7 +52,18 @@ input {
     font-weight: 14px;
 }
 
-button {
+#SortBtn {
+    border: none;
+    outline: none;
+    padding: 6px 15px;
+    background: #ff5945;
+    color: #fff;
+    font-size: 12px;
+    cursor: pointer;
+    border-radius: 40px;
+}
+
+#Add-Task {
     border: none;
     outline: none;
     padding: 16px 50px;
