--- a/Project-3-submission/css/index.css
+++ b/Project-3-submission/css/index.css
@@ -41,6 +41,7 @@
 .ToDoApp h2 {
     color: #5d0174;
     display: flex;
+    justify-content: center;
     align-items: center;
     margin-bottom: 20px;
 }
@@ -78,6 +79,7 @@ input {
     font-size: 12px;
     cursor: pointer;
     border-radius: 40px;
+    margin-bottom: 10px;
 }
 
 #Add-Task {
